# test_repo2

./: README.md  pyproject.toml
.github/workflows/: build_simple.yml
my_project/: __init__.py
tests/: test_basic.py
