[build-system]
requires = ["setuptools>=75.6", "wheel", "pyc-wheel>=1.7"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "A minimal Python project setup for packaging experimentation"
readme = "README.md"
requires-python = ">=3.8"
license = ""
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []
